# Monopoly-Telegram-Bot

./: .gitignore  Procfile  README.md  api_key.txt  logging.txt  monopoly.py  pyproject.toml  requirements.txt  responses.py  telegram_interaction.py  test.sh
static_responses/: help.txt  new_game.txt  not_all_ready_failure.txt  ready_already_ready_failure.txt  ready_game_dne_failure.txt  ready_missing_failure.txt  rules.txt  start.txt  start_game.txt  start_game_min_threshold.txt
tests/: test_monop.py
